src/objects/Case_Note_Entries__c.object
<CustomObject>
    <fields>
        <fullName>A_Time__c</fullName>
        <label>A-Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Weight__c</fullName>
        <label>A-Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Nurse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Nurse</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B_Time__c</fullName>
        <label>B-Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Weight__c</fullName>
        <label>B-Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A-Queue</fullName>
                </value>
                <value>
                    <fullName>B-Queue</fullName>
                </value>
                <value>
                    <fullName>C-Queue</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_T_W__c</fullName>
        <formula>Time__c +  Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total T&amp;W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Case Note Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Active_Nurse__c</columns>
        <columns>Time__c</columns>
        <columns>Weight__c</columns>
        <columns>Total_T_W__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Case_Notes</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Active_Nurse__c</columns>
        <columns>Time__c</columns>
        <columns>Weight__c</columns>
        <columns>Total_T_W__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Case Notes</label>
    </listViews>
    <listViews>
        <fullName>QC_A_Queue_Case_Note</fullName>
        <filterScope>Queue</filterScope>
        <label>QC A-Queue</label>
        <queue>QC_A_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QC_B_Queue_Case_Note</fullName>
        <filterScope>Queue</filterScope>
        <label>QC B-Queue</label>
        <queue>QC_B_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QC_C_Queue1_Case_Note</fullName>
        <filterScope>Queue</filterScope>
        <label>QC C-Queue</label>
        <queue>QC_C_Queue1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QC_Case_Note_Table</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Active_Nurse__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>A_Time__c</columns>
        <columns>A_Weight__c</columns>
        <columns>B_Time__c</columns>
        <columns>B_Weight__c</columns>
        <columns>Time__c</columns>
        <columns>Weight__c</columns>
        <columns>Total_T_W__c</columns>
        <filterScope>Everything</filterScope>
        <label>QC Case Note Table</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Case Note Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Notes Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>